# tiler

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
benchmark/: benchmark.cpp  benchmarks.ipynb  plot.py  show.py
benchmark/data/: 01  02  05  07  08  10
cmake/: CompilerWarnings.cmake
csp-demo/: problem-03x12  rectangles.json  rectangles.mzn  squares.json  squares.mzn
examples/: 01.problem  02.problem
problems/1/: 01x04_s  01x05_s  01x06_s  01x07_s  01x08_s  01x09_s  01x10_s  01x11_s  01x12_s  02x04_s  02x05_s  02x06_s  02x07_s  02x08_s  02x09_s  02x10_s  02x11_s  02x12_s  square-04x04_s  square-05x05_s  square-06x06_s  square-07x07_s  square-08x08_s  square-09x09_s  square-10x10_s  square-11x11_s  square-12x12_s
problems/2/: 01x04_s  01x06_s  01x08_s  01x10_s  01x12_s  01x14_s  01x16_s  01x18_s  01x20_s  02x04_s  02x06_s  02x08_s  02x10_s  02x12_s  02x14_s  02x16_s  02x18_s  02x20_s  corners-04x04_u  corners-04x06_u  corners-06x08_u  corners-08x08_u  corners-08x10_u  square-04x04_s  square-06x06_s  square-08x08_s  square-10x10_s  square-12x12_s  square-14x14_s  square-16x16_s  square-18x18_s  square-20x20_s
problems/3I/: 03x04_s  03x06_s  03x08_s  03x10_s  03x12_s  03x14_s  03x16_s  03x18_s  03x20_s  05x06_s  05x09_s  05x12_s  05x15_s  05x18_s  05x21_s  L-02x04_u  L-02x07_u  L-02x10_u  L-02x13_u  L-02x16_u  L-02x19_u  L-02x22_u  L-02x25_u  L-02x28_u  L-02x31_u  L-square-04x08_u  L-square-05x10_u
problems/3L/: 03x04_s  03x06_s  03x08_s  03x10_s  03x12_s  03x14_s  03x16_s  03x18_s  03x20_s  05x06_s  05x09_s  05x12_s  05x15_s  05x18_s  05x21_s  L-02x04_s  L-02x07_s  L-02x10_s  L-02x13_s  L-02x16_s  L-02x19_s  L-02x22_s  L-02x25_s  L-02x28_s  L-02x31_s
problems/4I/: 02x02_u  02x06_u  02x10_u  06x06_u  06x10_u  10x10_u  10x14_u  14x14_u
problems/4L/: 02x06_u  06x06_u  06x10_u  10x10_u
problems/4O/: 02x08_s  02x10_s  02x12_s  02x14_s  02x16_s  02x18_s  02x20_s  02x22_s  02x24_s  04x08_s  04x10_s  04x12_s  04x14_s  04x16_s  04x18_s  04x20_s  04x22_s  04x24_s  05x08_u  05x10_u  05x12_u  05x14_u  05x16_u  05x18_u  05x20_u  05x22_u  05x24_u  05x28_u  square-08x08_s  square-10x10_s  square-12x12_s  square-14x14_s  square-16x16_s  square-18x18_s  square-20x20_s  square-22x22_s  square-24x24_s
problems/individual/: 2-3-4-5-09x14_s  4r-5r-05x16'_s  4r-5r-08x10'_s  5-05x18_s  5r-04x15'_s  5r-fcr'_s  5r-hskew-06x10'_u  5r-sideways'_u  5r-skew-03x20'_s  5r-skew-05x12'_s  5r-skew-06x10'_s  mess-01_s  mess-02_s  snake-ordered-05_s  snake-ordered-20_s  snake-ordered-25_s  snake-reversed-05_s  snake-reversed-15_s  snake-reversed-25_s
problems/many-unique/: 2-3-4-5-06x21_s  2-3-4-5-07x18_s  4r-5r-04x20'_s  5-03x30_s  5-06x15_s  5-09x10_s  5r-03x20'_s  5r-05x12'_s  5r-06x10'_s  5r-H-08x09'_s  5r-diamond'_u  5r-plus'_u  5r-skew-04x15'_s  snake-ord-10_s  snake-ord-15_s  snake-rev-10_s  snake-rev-20_s
problems/misc/: 01_s  02'_s  03_s
problems/mixed/: 1-3I-04x04_s  1-3I-05x05_s  1-3I-07x07_s  1-3I-08x08_s  1-3I-10x10_s  1-3I-11x11_s  3I-1-04x04_s  3I-1-05x05_s  3I-1-07x07_s  3I-1-08x08_s  3I-1-10x10_s  3I-1-11x11_s  3L-4J-10x14_s  4O-4T-04x04_u  4Os-4T-06x06_u  4T-4O-04x04_u  4T-4Os-06x06_u  5Q-4L-plus-03x09_s
scripts/: .env  build-all-deps.sh  build-all.sh  build-breakid.sh  build-cadical.sh  build-chuffed.sh  build-cryptominisat.sh  build-dlx.sh  build-gecode.sh  build-kissat.sh  build-minizinc.sh  build-pblib.sh  build-sbva.sh  build.sh  dev-build.sh  dev-lint.sh  dev-setup.sh  dev-test.sh  gurobi-env.sh  gurobi-tune.sh  load-env.sh  release-benchmark.sh  release-build.sh  release-setup.sh  release.sh  setup.sh
src/: help_strings.cpp  help_strings.hpp  main.cpp  other.cpp  parse_error.hpp  print.hpp  solve_error.hpp  utils.cpp  utils.hpp
src/errors/: not_implemented_error.hpp  parse_error.hpp  solve_error.hpp  time_limit_error.hpp
src/parsers/: problem_parser.cpp  problem_parser.hpp  region_parser.cpp  region_parser.hpp  tile_parser.cpp  tile_parser.hpp
src/problem/: board.cpp  board.hpp  problem.cpp  problem.hpp  region.cpp  region.hpp  tile.cpp  tile.hpp
src/solution/: placed_region.hpp  solution.cpp  solution.hpp
src/solvers/: dlx_solver.cpp  dlx_solver.hpp  ilp_solver.cpp  ilp_solver.hpp  sat_amk_solver.cpp  sat_amk_solver.hpp  sat_amo_ordered_solver.cpp  sat_amo_ordered_solver.hpp  sat_amo_solver.cpp  sat_amo_solver.hpp  sat_oti_solver.cpp  sat_oti_solver.hpp  sat_solver.cpp  sat_solver.hpp  simple_solver.cpp  simple_solver.hpp  solver.hpp  solver_factory.cpp  solver_factory.hpp
src/solvers/csp/: csp_solver.cpp  csp_solver.hpp  minizinc_models.hpp  minizinc_wrapper.cpp  minizinc_wrapper.hpp
src/solvers/dlx/: dlx_solver.cpp  dlx_solver.hpp  dlx_wrapper.cpp  dlx_wrapper.hpp
src/solvers/dlx_utils/: dlx_wrapper.cpp  dlx_wrapper.hpp
src/solvers/ilp/: cbc_wrapper.cpp  cbc_wrapper.hpp  coin_cbc_wrapper.cpp  coin_cbc_wrapper.hpp  gurobi_wrapper.cpp  gurobi_wrapper.hpp  ilp_solver.cpp  ilp_solver.hpp  ilp_utils.hpp  ilp_wrapper.hpp
src/solvers/ilp_utils/: coin_cbc_wrapper.cpp  coin_cbc_wrapper.hpp  gurobi_wrapper.cpp  gurobi_wrapper.hpp  ilp_utils.hpp  ilp_wrapper.hpp
src/solvers/sat/: breakid_wrapper.cpp  breakid_wrapper.hpp  cadical_wrapper.cpp  cadical_wrapper.hpp  cryptominisat_wrapper.cpp  cryptominisat_wrapper.hpp  kissat_wrapper.cpp  kissat_wrapper.hpp  pblib_wrapper.cpp  pblib_wrapper.hpp  sat_amk_solver.cpp  sat_amk_solver.hpp  sat_amo_ordered_solver.cpp  sat_amo_ordered_solver.hpp  sat_amo_solver.cpp  sat_amo_solver.hpp  sat_preprocessor.hpp  sat_utils.hpp  sat_wrapper.hpp  sbva_wrapper.cpp  sbva_wrapper.hpp  symmetry_breaker.hpp
src/solvers/sat_utils/: breakid_wrapper.cpp  breakid_wrapper.hpp  cadical_wrapper.cpp  cadical_wrapper.hpp  cryptominisat_wrapper.cpp  cryptominisat_wrapper.hpp  pblib_wrapper.cpp  pblib_wrapper.hpp  sat_utils.hpp  sat_wrapper.hpp  symmetry_breaker.hpp
test/: CMakeLists.txt  test.cpp  utils.cpp
test/parsers/: problem_parser.cpp  region_parser.cpp  tile_parser.cpp
test/problem/: problem.cpp  region.cpp  tile.cpp
test/solvers/: solvers.cpp
(+3 files in other folders)
